// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioIcon /> with Novo theme should render correctly when is checked 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #0056E0;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#0056E0"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      d="M12 17.25c2.8995 0 5.25-2.3505 5.25-5.25S14.8995 6.75 12 6.75 6.75 9.1005 6.75 12s2.3505 5.25 5.25 5.25Z"
    />
    <path
      clipRule="evenodd"
      d="M21 12c0 4.9706-4.0294 9-9 9s-9-4.0294-9-9 4.0294-9 9-9 9 4.0294 9 9Zm-1.5 0c0 4.1421-3.3579 7.5-7.5 7.5S4.5 16.1421 4.5 12 7.8579 4.5 12 4.5s7.5 3.3579 7.5 7.5Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with Novo theme should render correctly when is disabled 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #C2C2C2;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#C2C2C2"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with Novo theme should render correctly when is focused 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #0056E0;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#0056E0"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with Novo theme should render correctly when is hovered  1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #0056E0;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#0056E0"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with Novo theme should render correctly with default props 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #666666;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#666666"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with NovoDark theme should render correctly when is checked 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #CCDDF9;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#CCDDF9"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      d="M12 17.25c2.8995 0 5.25-2.3505 5.25-5.25S14.8995 6.75 12 6.75 6.75 9.1005 6.75 12s2.3505 5.25 5.25 5.25Z"
    />
    <path
      clipRule="evenodd"
      d="M21 12c0 4.9706-4.0294 9-9 9s-9-4.0294-9-9 4.0294-9 9-9 9 4.0294 9 9Zm-1.5 0c0 4.1421-3.3579 7.5-7.5 7.5S4.5 16.1421 4.5 12 7.8579 4.5 12 4.5s7.5 3.3579 7.5 7.5Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with NovoDark theme should render correctly when is disabled 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #666666;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#666666"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with NovoDark theme should render correctly when is focused 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #0056E0;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#0056E0"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with NovoDark theme should render correctly when is hovered  1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #0056E0;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#0056E0"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with NovoDark theme should render correctly with default props 1`] = `
.c0 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #C2C2C2;
}

<svg
  aria-hidden="true"
  className="c0"
  color="#C2C2C2"
  disabled={false}
  role="presentation"
  selected={false}
  size={null}
  viewBox="0 0 24 24"
>
  <g>
    <path
      clipRule="evenodd"
      d="M12 19.5c4.1421 0 7.5-3.3579 7.5-7.5S16.1421 4.5 12 4.5 4.5 7.8579 4.5 12s3.3579 7.5 7.5 7.5Zm0 1.5c4.9706 0 9-4.0294 9-9s-4.0294-9-9-9-9 4.0294-9 9 4.0294 9 9 9Z"
      fillRule="evenodd"
    />
  </g>
</svg>
`;

exports[`<RadioIcon /> with classic theme should render correctly when is checked 1`] = `
<RadioIconClassic
  hasLabel={false}
  isChecked={true}
  isDisabled={false}
  isFocused={false}
  isHovered={false}
/>
`;

exports[`<RadioIcon /> with classic theme should render correctly when is disabled 1`] = `
<RadioIconClassic
  hasLabel={false}
  isChecked={false}
  isDisabled={true}
  isFocused={false}
  isHovered={false}
/>
`;

exports[`<RadioIcon /> with classic theme should render correctly when is focused 1`] = `
<RadioIconClassic
  hasLabel={false}
  isChecked={false}
  isDisabled={false}
  isFocused={true}
  isHovered={false}
/>
`;

exports[`<RadioIcon /> with classic theme should render correctly when is hovered  1`] = `
<RadioIconClassic
  hasLabel={false}
  isChecked={false}
  isDisabled={false}
  isFocused={false}
  isHovered={true}
/>
`;

exports[`<RadioIcon /> with classic theme should render correctly with default props 1`] = `
<RadioIconClassic
  hasLabel={false}
  isChecked={false}
  isDisabled={false}
  isFocused={false}
  isHovered={false}
/>
`;
